syntax = "proto3";
// 后台数据结构定义

option optimize_for = SPEED;
// option optimize_for = LITE_RUNTIME;
// option optimize_for = CODE_SIZE;
// --cpp_out=lite:,--cpp_out=
option cc_enable_arenas = true;

option go_package = "github.com/atframework/atsf4g-go/component-protocol-private/pbdesc/protocol/pbdesc";


message quest_trigger_params{
    quest_trigger_params_common_params common_params = 1;
    oneof param {
        quest_target_params_player_level player_level = 2;
    }
}

message quest_trigger_params_common_params {
}


message quest_target_params_player_level {
    int64 pre_level = 1;
    int64 cur_level = 2;
}