syntax = "proto3";

option optimize_for = SPEED;
// option optimize_for = LITE_RUNTIME;
// option optimize_for = CODE_SIZE;
// --cpp_out=lite:,--cpp_out=
option cc_enable_arenas = true;

option go_package = "github.com/atframework/atsf4g-go/component-protocol-public/pbdesc/protocol/pbdesc";

import "protocol/common/com.struct.quest.common.proto";
import "protocol/common/com.struct.item.common.proto";

package proy;

message DUserQuestUnlockConditionDetail {
  map<int64, bool> detail = 1;  // key 是unlock_condition value
}

message DUserQuestUnlockConditionTypes {
  map<int32, DUserQuestUnlockConditionDetail> unlock_conditions = 1;  // key 是unlock_condition_type
}

message DUserQuestResetInfo {
  int32 quest_id = 1;
  int64 timepoint = 2;  // 这里是 00:00:00这样的，当天时间点
}

message DUserQuestData {
  int32 quest_id = 1;
  int64 value = 2;
  EnQuestStatus status = 3;
  map<int64, bool> unique_count = 4;  // 可选字段，非必填，用于部分任务进度的去重
  int64 created_time = 5;             // 领取任务的时间
}

message DQuestProgressForSpecialReport {
  int32 quest_id = 1;
  int64 value = 2;
}

message DUserQuestEventList {
  repeated DQuestData dirty_quests = 21;
  repeated int32 deleted_quest_ids = 22;
}

message DUserQuestProgressData {
  int32 unique_id = 1;
  // EnQuestProgressType progress_type = 2;
  int64 value = 3;
  EnQuestProgressStatusType status = 4;
  map<int64, bool> unique_count = 5;  // 可选字段，非必填，用于部分任务进度的去重
  int64 created_time = 6;             // 领取任务的时间
}

message DQuestData {
  int32 quest_id = 1;

  EnQuestStatus status = 2;
  repeated DUserQuestProgressData progress = 3;

  int64 created_time = 4;
  int64 completed_time = 5;
  int64 received_time = 6;
  int64 expired_time = 7;
  int64 reset_time = 8;
}

message DUserQuestsData {
  repeated DQuestData progressing_quests = 1;
  repeated DQuestData completed_quests = 2;
  repeated DQuestData received_quests = 3;
}

message DuserQuestRewardData {
  int32 quest_id = 1;  // 任务ID
  repeated DItemBasic reward_items = 2;
}